# stochastic-text

./: .gitignore  README.md  ]  scrapbook.txt  stochastic-text.cabal
snaplets/heist/templates/: _poem.tpl  poem.tpl
snaplets/stochastic/: sample_poem.js
src/: Application.hs  Site.hs  Stochastic.hs  Util.hs
static/: index.html
static/css/: master.css
static/js/: poll.js
