Name:                stochastic-text
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable stochastic-text
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.12    && < 0.13,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    transformers              >= 0.3.0.0,
    mtl                       >= 2       && < 3,
    snap                      >= 0.11    && < 0.13,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    snap-extras               >= 0.6,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    thyme                     >= 0.2.3.0 && < 0.2.5.0,
    vector-space              >= 0.8.4, 
    xmlhtml                   >= 0.1,
    filepath                  >= 1.1,
    aeson                     >= 0.6,
    errors                    >= 1.4,
    distributive              >= 0.3.1,
    streams                   >= 3.1.1,
    bifunctors                >= 3.2,
    blaze-builder             >= 0.3,
    containers                >= 0.5,
    random                    >= 1.0.0,
    MonadRandom               >= 0.1.0

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.10

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
